// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not show suggestion when unrecognized cli param length <= 1 1`] = `
"<red><bold><bold>●</><bold> Unrecognized CLI Parameter</>:</>
<red></>
<red>  Unrecognized option <bold>\\"l\\"</>.</>
<red></>
<red>  <bold>CLI Options Documentation</>:</>
<red>  https://jestjs.io/docs/cli</>
<red></>"
`;

exports[`fails for multiple unknown options 1`] = `
"<red><bold><bold>●</><bold> Unrecognized CLI Parameters</>:</>
<red></>
<red>  Following options were not recognized:</>
<red>  <bold>[\\"jest\\", \\"test\\"]</></>
<red></>
<red>  <bold>CLI Options Documentation</>:</>
<red>  https://jestjs.io/docs/cli</>
<red></>"
`;

exports[`fails for unknown option 1`] = `
"<red><bold><bold>●</><bold> Unrecognized CLI Parameter</>:</>
<red></>
<red>  Unrecognized option <bold>\\"unknown\\"</>.</>
<red></>
<red>  <bold>CLI Options Documentation</>:</>
<red>  https://jestjs.io/docs/cli</>
<red></>"
`;

exports[`shows suggestion when unrecognized cli param length > 1 1`] = `
"<red><bold><bold>●</><bold> Unrecognized CLI Parameter</>:</>
<red></>
<red>  Unrecognized option <bold>\\"hell\\"</>. Did you mean <bold>\\"help\\"</>?</>
<red></>
<red>  <bold>CLI Options Documentation</>:</>
<red>  https://jestjs.io/docs/cli</>
<red></>"
`;
